# blockchain-crowdfunding-icp

./: .gitignore  README.md
icp_crowdfunding/: dfx.json
icp_crowdfunding/src/icp_crowdfunding_backend/: Cargo.toml  icp_crowdfunding_backend.did
icp_crowdfunding/src/icp_crowdfunding_backend/icp_crowdfunding/src/icp_crowdfunding_backend/: Cargo.toml
icp_crowdfunding/src/icp_crowdfunding_backend/icp_crowdfunding/src/icp_crowdfunding_backend/src/: lib.rs
icp_crowdfunding/src/icp_crowdfunding_backend/src/: lib.rs
icp_crowdfunding/src/icp_crowdfunding_frontend/src/: App.jsx  index.html  index.jsx
icp_crowdfunding/src/icp_crowdfunding_frontend/src/components/: AuthRequired.jsx  CampaignDetail.jsx  CampaignList.jsx  CreateCampaign.jsx  Header.jsx
icp_crowdfunding/src/icp_crowdfunding_frontend/src/services/: api.js  authContext.jsx
